--- a/NewGeneration/Views/Home/Index.cshtml
+++ b/NewGeneration/Views/Home/Index.cshtml
@@ -1,31 +1,37 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@*Create Master Page.*@
+
+@{ 
+    Layout = null;
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<!DOCTYPE html>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width"/>
+        <title>Language School</title>
+    </head>
+    <body>
+        <div>
+            <h3>Add Pupil</h3>
+            <table>
+                <tr>
+                    <td><p>Surname</p></td>
+                    <td><p>Name</p></td>
+                    <td><p>Birthday</p></td>
+                    <td><p>Phone</p></td>
+                </tr>
+                @foreach(var p in ViewBag.Pupils)
+                {
+                    <tr>
+                        <td><p>@p.Surname</p></td>
+                        <td><p>@p.Name</p></td>
+                        <td><p>@p.Birthday</p></td>
+                        <td><p>@p.Phone</p></td>
+                        <td><p><a href="/Home/Insert/@p.Id">Add</a></p></td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </body>
+</html>
