Update next files - "HomeController.cs", "Parent.cs", "Index.cshtml".

--- a/NewGeneration/Views/Home/Index.cshtml
+++ b/NewGeneration/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                         <td><p>@p.Name</p></td>
                         <td><p>@p.Birthday</p></td>
                         <td><p>@p.Phone</p></td>
-                        <td><p><a href="/Home/Insert/@p.Id">Add</a></p></td>
+                        <td><p><a href="/Home/Add/@p.Id">Add</a></p></td>
                     </tr>
                 }
             </table>
