--- a/NewGeneration/Views/Home/Add.cshtml
+++ b/NewGeneration/Views/Home/Add.cshtml
@@ -1,34 +1,25 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Add</title>
-</head>
-<body>
-    <div> 
-        <h3>Form Adding Pupil</h3>
-        <form method="post" action="">
-            <input type="hidden" value="@ViewBag.PupilId" name="BookId"/>
-            <table>
-                <tr>
-                    <td><p>Insert your name</p></td>
-                    <td><input type="text" name="Name"/></td>
-                </tr>
-                <tr>
-                    <td><p>Insert your middle name</p></td>
-                    <td><input type="text" name="MiddleName"/></td>
-                </tr>
-                <tr>
-                    <td><input type="submit" value="Add"/></td>
-                </tr>
-            </table>
-        </form>
-    </div>
-</body>
-</html>
+<div> 
+    <h3>Form Adding Pupil</h3>
+    <form method="post" action="">
+        <input type="hidden" value="@ViewBag.PupilId" name="BookId"/>
+        <table>
+            <tr>
+                <td><p>Insert your name</p></td>
+                <td><input type="text" name="Name"/></td>
+            </tr>
+            <tr>
+                <td><p>Insert your middle name</p></td>
+                <td><input type="text" name="MiddleName"/></td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="Add"/></td>
+            </tr>
+        </table>
+    </form>
+</div>
